--- a/bigtree.html
+++ b/bigtree.html
@@ -3,40 +3,174 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Big Tree</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.css">
 	<link rel="stylesheet" type="text/css" href="bigtree.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick-theme.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-	<section class="landing">
-		<div class="content">
-			<div class="about">
-				<h2>Big Tree.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia mauris felis, et semper sem feugiat id. Suspendisse quis magna ligula. Donec id suscipit erat. Duis malesuada efficitur luctus. Donec viverra metus maximus est ultrices, eget vulputate ipsum placerat. Cras felis augue, pulvinar in est quis, gravida eleifend justo. Vivamus.</p>
-				<a href="#">Sign Up</a>
-			</div>
-		</div>
-			<nav class="navbar fixed-top navbar-expand-md justify-content-center">
+	<header class="landing">
+		<nav class="navbar justify-content-center">
 	  			<ul class="nav-list">
 	  				<li class="nav-item">
 	    	  			<a class="nav-link" href="#">Logo</a>
 	    			</li>
 	    			<li class="nav-item">
-	    	  			<a class="nav-link" href="#about">About</a>
+	    	  			<a class="nav-link" href="#">About</a>
 	    			</li>
 	    			<li class="nav-item">
-	    	  			<a class="nav-link" href="#services">Jobs</a>
+	    	  			<a class="nav-link" href="#">Jobs</a>
 	    			</li>
 	    			<li class="nav-item">
-	    	  			<a class="nav-link" href="#contact">Contact</a>
+	    	  			<a class="nav-link" href="#">Contact</a>
 	    			</li>
 	  			</ul>
-			</nav>
+		</nav>
+		<div class="content">
+			<div class="landing">
+				<h2>Big Tree.</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia mauris felis, et semper sem feugiat id.</p>
+				<a class="sign" href="#">Sign Up</a>
+			</div>
 			<ul class="social">
-				<li><a href="#">Facebook</a></li>
-				<li><a href="#">Twitter</a></li>
-				<li><a href="#">Instagram</a></li>
-			</ul>
-	</section>
+			<li><a href="#">Facebook</a></li>
+			<li><a href="#">Instagram</a></li>
+		</ul>
+		</div>			
+	</header>
+	<div class="container-fluid">
+			<div id="about" class="about">
+				<h2>Our Mission</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lectus lorem, ultricies eu aliquam ac, posuere vestibulum nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.</p>
+			</div>
+		
+
+
+	<div class='test'>
+		<div class="test-heading">
+			<h2>Testimonials</h2>
+		</div>
+	  <div class='slider single-item'>
+	    <div class='quote-container'>
+	      <div class='portrait'>
+	        <img alt='' src='http://www.tuacahntech.com/uploads/6/1/7/9/6179841/6166205_orig.jpg'>
+	      </div>
+	      <div class='quote'>
+	        <blockquote>
+	          <p>Meditation shabby chic master cleanse banh mi Godard. Asymmetrical Wes Anderson Intelligentsia you probably haven't heard of them.</p>
+	          <cite>
+	            <span>Kristi McSweeney</span>
+	            <br>
+	            Thundercats twee
+	            <br>
+	            Austin selvage beard
+	          </cite>
+	        </blockquote>
+	      </div>
+	    </div>
+	    <div class='quote-container'>
+	      <div class='portrait'>
+	        <img alt='' src='http://static1.squarespace.com/static/51579fb2e4b0fc0d9469ff97/56cc83dfe707ebc39cf3269f/56d0b59e27d4bde4665fded3/1457365822199/'>
+	      </div>
+	      <div class='quote'>
+	        <blockquote>
+	          <p>Bespoke occupy cred seitan. Austin street art freegan Truffaut leggings aesthetic, salvia chia Brooklyn flexitarian. Single-origin coffee before they sold out health goth, cornhole irony keffiyeh Austin taxidermy mlkshk blog trust fund banh mi you probably haven't heard of them.</p>
+	          <cite>
+	            <span>Dina Anderson</span>
+	            <br>
+	            Blue Bottle keffiyeh
+	            <br>
+	            Sartorial locavore Schlitz ennui
+	          </cite>
+	        </blockquote>
+	      </div>
+	    </div>
+	    <div class='quote-container'>
+	      <div class='portrait'>
+	        <img alt='' src='http://www.tuacahntech.com/uploads/6/1/7/9/6179841/6166205_orig.jpg'>
+	      </div>
+	      <div class='quote'>
+	        <blockquote>
+	          <p>Meditation shabby chic master cleanse banh mi Godard. Asymmetrical Wes Anderson Intelligentsia you probably haven't heard of them.</p>
+	          <cite>
+	            <span>Kristi McSweeney</span>
+	            <br>
+	            Thundercats twee
+	            <br>
+	            Austin selvage beard
+	          </cite>
+	        </blockquote>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+</div>
+
+	<footer class="page-footer font-small unique-color-dark">
+
+	  <div style="background-color: #00203fff;">
+	    <div class="container">
+	      <div class="row py-4 d-flex align-items-center">
+	        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+	          <h6 class="mb-0">Get connected with us on social networks!</h6>
+	        </div>
+	        <div class="col-md-6 col-lg-7 text-center text-md-right">
+	          <a class="fb-ic">
+	            <i class="fab fa-facebook-f white-text mr-4"> </i>
+	          </a>
+	          <a class="li-ic">
+	            <i class="fab fa-linkedin-in white-text mr-4"> </i>
+	          </a>
+	          <a class="ins-ic">
+	            <i class="fab fa-instagram white-text"> </i>
+	          </a>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="container text-center text-md-left mt-5">
+	    <div class="row mt-3">
+	      <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+	        <h6 class="text-uppercase font-weight-bold">Company name</h6>
+	        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+	        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	      </div>
+	      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+	        <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+	        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+	        <p>
+	          <a href="#">Your Account</a>
+	        </p>
+	        <p>
+	          <a href="#">Become an Affiliate</a>
+	        </p>
+	        <p>
+	          <a href="#">Help</a>
+	        </p>
+	      </div>
+	      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+	        <h6 class="text-uppercase font-weight-bold">Contact</h6>
+	        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+	        <p>
+	          <i class="fas fa-home mr-3"></i> Chennai, India</p>
+	        <p>
+	          <i class="fas fa-envelope mr-3"></i> abc@example.com</p>
+	        <p>
+	          <i class="fas fa-phone mr-3"></i> +91 1234567890</p>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+	    <a href="https://mdbootstrap.com/education/bootstrap/"> Bigtree.com</a>
+	  </div>
+	</footer>
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
+<script type="text/javascript" src="bigtree.js"></script>
 </body>
 </html>
