--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Big Tree</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.css">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="bigtree.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick-theme.css">
@@ -18,7 +18,7 @@
 	    	  			<a class="nav-link" href="#">Logo</a>
 	    			</li>
 	    			<li class="nav-item">
-	    	  			<a class="nav-link" href="#">About</a>
+	    	  			<a class="nav-link" href="#about">About</a>
 	    			</li>
 	    			<li class="nav-item">
 	    	  			<a class="nav-link" href="#">Jobs</a>
@@ -42,71 +42,74 @@
 	</header>
 	<div class="container-fluid">
 			<div id="about" class="about">
-				<h2>Our Mission</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lectus lorem, ultricies eu aliquam ac, posuere vestibulum nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.</p>
+				<div class="heading">
+					<h2>Our Mission</h2>
+				</div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lectus lorem, ultricies eu aliquam ac, posuere vestibulum nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.</p>
 			</div>
 		
 
-
-	<div class='test'>
-		<div class="test-heading">
-			<h2>Testimonials</h2>
+	<div class="container-fluid">
+		<div class='test'>
+			<div class="heading">
+				<h2>Testimonials</h2>
+			</div>
+			  <div class='slider single-item'>
+			    <div class='quote-container'>
+			      <div class='portrait'>
+			        <img alt='' src='http://www.tuacahntech.com/uploads/6/1/7/9/6179841/6166205_orig.jpg'>
+			      </div>
+			      <div class='quote'>
+			        <blockquote>
+			          <p>Meditation shabby chic master cleanse banh mi Godard. Asymmetrical Wes Anderson Intelligentsia you probably haven't heard of them.</p>
+			          <cite>
+			            <span>Kristi McSweeney</span>
+			            <br>
+			            Thundercats twee
+			            <br>
+			            Austin selvage beard
+			          </cite>
+			        </blockquote>
+			      </div>
+			    </div>
+			    <div class='quote-container'>
+			      <div class='portrait'>
+			        <img alt='' src='http://static1.squarespace.com/static/51579fb2e4b0fc0d9469ff97/56cc83dfe707ebc39cf3269f/56d0b59e27d4bde4665fded3/1457365822199/'>
+			      </div>
+			      <div class='quote'>
+			        <blockquote>
+			          <p>Bespoke occupy cred seitan. Austin street art freegan Truffaut leggings aesthetic, salvia chia Brooklyn flexitarian. Single-origin coffee before they sold out health goth, cornhole irony keffiyeh Austin taxidermy mlkshk blog trust fund banh mi you probably haven't heard of them.</p>
+			          <cite>
+			            <span>Dina Anderson</span>
+			            <br>
+			            Blue Bottle keffiyeh
+			            <br>
+			            Sartorial locavore Schlitz ennui
+			          </cite>
+			        </blockquote>
+			      </div>
+			    </div>
+			    <div class='quote-container'>
+			      <div class='portrait'>
+			        <img alt='' src='http://www.tuacahntech.com/uploads/6/1/7/9/6179841/6166205_orig.jpg'>
+			      </div>
+			      <div class='quote'>
+			        <blockquote>
+			          <p>Meditation shabby chic master cleanse banh mi Godard. Asymmetrical Wes Anderson Intelligentsia you probably haven't heard of them.</p>
+			          <cite>
+			            <span>Kristi McSweeney</span>
+			            <br>
+			            Thundercats twee
+			            <br>
+			            Austin selvage beard
+			          </cite>
+			        </blockquote>
+			      </div>
+			    </div>
+			  </div>
+			</div>
 		</div>
-	  <div class='slider single-item'>
-	    <div class='quote-container'>
-	      <div class='portrait'>
-	        <img alt='' src='http://www.tuacahntech.com/uploads/6/1/7/9/6179841/6166205_orig.jpg'>
-	      </div>
-	      <div class='quote'>
-	        <blockquote>
-	          <p>Meditation shabby chic master cleanse banh mi Godard. Asymmetrical Wes Anderson Intelligentsia you probably haven't heard of them.</p>
-	          <cite>
-	            <span>Kristi McSweeney</span>
-	            <br>
-	            Thundercats twee
-	            <br>
-	            Austin selvage beard
-	          </cite>
-	        </blockquote>
-	      </div>
-	    </div>
-	    <div class='quote-container'>
-	      <div class='portrait'>
-	        <img alt='' src='http://static1.squarespace.com/static/51579fb2e4b0fc0d9469ff97/56cc83dfe707ebc39cf3269f/56d0b59e27d4bde4665fded3/1457365822199/'>
-	      </div>
-	      <div class='quote'>
-	        <blockquote>
-	          <p>Bespoke occupy cred seitan. Austin street art freegan Truffaut leggings aesthetic, salvia chia Brooklyn flexitarian. Single-origin coffee before they sold out health goth, cornhole irony keffiyeh Austin taxidermy mlkshk blog trust fund banh mi you probably haven't heard of them.</p>
-	          <cite>
-	            <span>Dina Anderson</span>
-	            <br>
-	            Blue Bottle keffiyeh
-	            <br>
-	            Sartorial locavore Schlitz ennui
-	          </cite>
-	        </blockquote>
-	      </div>
-	    </div>
-	    <div class='quote-container'>
-	      <div class='portrait'>
-	        <img alt='' src='http://www.tuacahntech.com/uploads/6/1/7/9/6179841/6166205_orig.jpg'>
-	      </div>
-	      <div class='quote'>
-	        <blockquote>
-	          <p>Meditation shabby chic master cleanse banh mi Godard. Asymmetrical Wes Anderson Intelligentsia you probably haven't heard of them.</p>
-	          <cite>
-	            <span>Kristi McSweeney</span>
-	            <br>
-	            Thundercats twee
-	            <br>
-	            Austin selvage beard
-	          </cite>
-	        </blockquote>
-	      </div>
-	    </div>
-	  </div>
 	</div>
-</div>
 
 	<footer class="page-footer font-small unique-color-dark">
 
@@ -171,6 +174,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="bigtree.js"></script>
 </body>
 </html>
