--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		
 
 	<div class="container-fluid">
-		<div class='test'>
+		<div class="test">
 			<div class="heading">
 				<h2>Testimonials</h2>
 			</div>
@@ -108,8 +108,7 @@
 			    </div>
 			  </div>
 			</div>
-		</div>
-	</div>
+		       </div>
 
 	<footer class="page-footer font-small unique-color-dark">
 
