--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lectus lorem, ultricies eu aliquam ac, posuere vestibulum nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec consequat orci turpis, sed fringilla enim elementum vel. Mauris fringilla nibh eu lorem lacinia lacinia. Integer finibus porttitor luctus.</p>
 			</div>
-		
+	</div>	
 
 	<div class="container-fluid">
 		<div class="test">
@@ -108,8 +108,9 @@
 			    </div>
 			  </div>
 			</div>
-		       </div>
 
+	<div class="container-fluid">
+       
 	<footer class="page-footer font-small unique-color-dark">
 
 	  <div style="background-color: #00203fff;">
@@ -168,7 +169,7 @@
 	    <a href="https://mdbootstrap.com/education/bootstrap/"> Bigtree.com</a>
 	  </div>
 	</footer>
-
+     </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
